--- a/Gen_Prediction/Gen_Prediction.vbproj
+++ b/Gen_Prediction/Gen_Prediction.vbproj
@@ -6,7 +6,7 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{8A0D3C29-94A3-49C5-91EB-8600FFF6385F}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <StartupObject>Gen_Prediction.Module1</StartupObject>
+    <StartupObject>Gen_Prediction.WeeklyPrediciton</StartupObject>
     <RootNamespace>Gen_Prediction</RootNamespace>
     <AssemblyName>Gen_Prediction</AssemblyName>
     <FileAlignment>512</FileAlignment>
@@ -71,7 +71,7 @@
     <Import Include="System.Threading.Tasks" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Module1.vb" />
+    <Compile Include="DailyPrediction.vb" />
     <Compile Include="My Project\AssemblyInfo.vb" />
     <Compile Include="My Project\Application.Designer.vb">
       <AutoGen>True</AutoGen>
@@ -87,6 +87,7 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <Compile Include="WeeklyPrediction.vb" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="My Project\Resources.resx">
